Завершил Service - хотя надо бы проверить заново всю логику.